aws-jwt-in-py-sdk/terraform/vpc.tf
data "aws_availability_zones" "available" {}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "6.5.1"

  name = local.prefix
  cidr = var.cidr_block
  azs  = data.aws_availability_zones.available.names
  tags = var.tags

  enable_dns_hostnames = true
  enable_nat_gateway   = true
  single_nat_gateway   = true
  create_igw           = true

  public_subnets = [cidrsubnet(var.cidr_block, 3, 0)]
  private_subnets = [cidrsubnet(var.cidr_block, 3, 1),
  cidrsubnet(var.cidr_block, 3, 2)]

  manage_default_security_group = true
  default_security_group_name   = "${local.prefix}-sg"

  default_security_group_egress = [{
    cidr_blocks = "0.0.0.0/0"
  }]

  default_security_group_ingress = [{
    description = "Allow all internal TCP and UDP"
    self        = true
  }]
}

module "vpc_endpoints" {
  source  = "terraform-aws-modules/vpc/aws//modules/vpc-endpoints"
  version = "6.5.1"

  vpc_id             = module.vpc.vpc_id
  security_group_ids = [module.vpc.default_security_group_id]

  endpoints = {
    s3 = {
      service      = "s3"
      service_type = "Gateway"
      route_table_ids = flatten([
        module.vpc.private_route_table_ids,
      module.vpc.public_route_table_ids])
      tags = {
        Name = "${local.prefix}-s3-vpc-endpoint"
      }
    },
    sts = {
      service             = "sts"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      tags = {
        Name = "${local.prefix}-sts-vpc-endpoint"
      }
    },
    kinesis-streams = {
      service             = "kinesis-streams"
      private_dns_enabled = true
      subnet_ids          = module.vpc.private_subnets
      tags = {
        Name = "${local.prefix}-kinesis-vpc-endpoint"
      }
    },
  }

  tags = var.tags
}

data "http" "myip" {
  url = "http://ipv4.icanhazip.com"
}


locals {
  local_ip_address = "${chomp(data.http.myip.response_body)}/32"
  ip_addresses     = concat([local.local_ip_address], var.additional_ip_addresses)
}


resource "aws_security_group" "security" {
  name   = "${local.prefix}-allow-ssh"
  vpc_id = module.vpc.vpc_id

  tags = {
    Owner = "alexey.ott@databricks.com"
  }

  ingress {
    cidr_blocks = local.ip_addresses
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  # This is for Splunk in Docker
  ingress {
    cidr_blocks = local.ip_addresses
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = local.ip_addresses
    from_port   = 8088
    to_port     = 8088
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = local.ip_addresses
    from_port   = 8089
    to_port     = 8089
    protocol    = "tcp"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
